@@ -124,6 +124,10 @@
    - deraadt@cvs.openbsd.org 2001/03/03 06:53:12
      [ssh-keyscan.c]
      standard theo sweep
+   - millert@cvs.openbsd.org 2001/03/03 21:19:41
+     [ssh-keyscan.c]
+     Dynamically allocate read_wait and its copies.  Since maxfd is
+     based on resource limits it is often (usually?) larger than FD_SETSIZE.
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
